<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PizzaMenuActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtPizzaMenuToolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivPizzaMenuLogo"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/ic_pizza_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivPizzaMenuLogo"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_white_heart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPizzaMenuSearchContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/pizza_menu_search_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtPizzaMenuToolbar">

        <EditText
            android:id="@+id/etPizzaMenuSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/search_edittext_background"
            android:drawableEnd="@drawable/ic_search_red"
            android:hint="@string/pizza_menu_search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingTop="16dp"
            android:paddingEnd="20dp"
            android:paddingBottom="16dp"
            android:textColorHint="@color/searchHintColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btvPizzaMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clPizzaMenuSearchContainer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPizzaMenuTopMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/pizza_menu_top_menu_title"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/tvPizzaMenuTopMenuSeeAll"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPizzaMenuTopMenuSeeAll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/pizza_menu_top_menu_see_all_title"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvPizzaMenuTopMenu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvPizzaMenuTopMenu" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/bPizzaMenuTopMenuBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tvPizzaMenuTopMenu,tvPizzaMenuTopMenuSeeAll" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPizzaMenuTopMenu"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bPizzaMenuTopMenuBarrier"
                tools:listitem="@layout/top_menu_item" />

            <TextView
                android:id="@+id/tvPizzaMenuHotPromo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/pizza_menu_hot_promo_title"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvPizzaMenuTopMenu" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPizzaMenuHotPromo">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary">

                    <ImageView
                        android:id="@+id/ivPizzaMenuHotPromo"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_marginStart="12dp"
                        android:src="@drawable/pizza_2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvPizzaMenuHotPromoName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/pizza_menu_hot_promo_name"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivPizzaMenuHotPromo"
                        app:layout_constraintTop_toTopOf="@+id/ivPizzaMenuHotPromo" />

                    <TextView
                        android:id="@+id/tvPizzaMenuHotPromoCategory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/pizza_menu_hot_promo_category"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="@+id/tvPizzaMenuHotPromoName"
                        app:layout_constraintStart_toStartOf="@+id/tvPizzaMenuHotPromoName"
                        app:layout_constraintTop_toBottomOf="@+id/tvPizzaMenuHotPromoName" />

                    <TextView
                        android:id="@+id/tvPizzaMenuHotPromoTimeLeft"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/pizza_menu_hot_promo_time_left"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        app:drawableStartCompat="@drawable/ic_clock"
                        app:layout_constraintEnd_toEndOf="@+id/tvPizzaMenuHotPromoName"
                        app:layout_constraintStart_toStartOf="@+id/tvPizzaMenuHotPromoName"
                        app:layout_constraintTop_toBottomOf="@+id/tvPizzaMenuHotPromoCategory" />

                    <TextView
                        android:id="@+id/tvPizzaMenuHotPromoDiscountPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pizza_menu_hot_promo_discount_price"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/ivPizzaMenuHotPromoAdd"
                        app:layout_constraintStart_toStartOf="@+id/tvPizzaMenuHotPromoName"
                        app:layout_constraintTop_toTopOf="@+id/ivPizzaMenuHotPromoAdd" />

                    <TextView
                        android:id="@+id/tvPizzaMenuHotPromoPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/pizza_menu_hot_promo_price"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/ivPizzaMenuHotPromoAdd"
                        app:layout_constraintEnd_toStartOf="@+id/ivPizzaMenuHotPromoAdd"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@+id/tvPizzaMenuHotPromoDiscountPrice"
                        app:layout_constraintTop_toTopOf="@+id/ivPizzaMenuHotPromoAdd" />

                    <ImageButton
                        android:id="@+id/ivPizzaMenuHotPromoAdd"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_button_plus_white"
                        app:layout_constraintBottom_toBottomOf="@+id/ivPizzaMenuHotPromo"
                        app:layout_constraintEnd_toEndOf="@+id/tvPizzaMenuHotPromoName" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/btvPizzaMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_navigation" />
</androidx.constraintlayout.widget.ConstraintLayout>