<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PizzaMenuActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtPizzaDetailToolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPizzaDetailMenuBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivPizzaDetailBack"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_heart_no_fill"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtPizzaDetailToolbar">

        <View
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:background="@drawable/pizza_detail_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPizzaDetailName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ivPizzaDetailPizza"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Pizza Beef Cheese" />

        <ImageView
            android:id="@+id/ivPizzaDetailPizza"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="100dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/pizza_2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clPizzaDetailEnergyContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/clPizzaDetailWeightContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPizzaDetailPizza">

            <TextView
                android:id="@+id/tvPizzaDetailEnergy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza_detail_energy"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPizzaDetailEnergyTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPizzaDetailEnergyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza_detail_energy_title"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPizzaDetailEnergy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clPizzaDetailWeightContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/clPizzaDetailDeliveryContainer"
            app:layout_constraintStart_toEndOf="@+id/clPizzaDetailEnergyContainer"
            app:layout_constraintTop_toBottomOf="@+id/ivPizzaDetailPizza">

            <TextView
                android:id="@+id/tvPizzaDetailWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza_detail_weight"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPizzaDetailWeightTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPizzaDetailWeightTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza_detail_weight_title"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPizzaDetailWeight" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clPizzaDetailDeliveryContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/clPizzaDetailWeightContainer"
            app:layout_constraintTop_toBottomOf="@+id/ivPizzaDetailPizza">

            <TextView
                android:id="@+id/tvPizzaDetailDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza_detail_delivery"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPizzaDetailDeliveryTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPizzaDetailDeliveryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza_detail_delivery_title"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPizzaDetailDelivery" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/bPizzaDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="clPizzaDetailWeightContainer,clPizzaDetailDeliveryContainer,clPizzaDetailEnergyContainer" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:ellipsize="end"
            android:text="@string/pizza_detail_description"
            app:layout_constraintBottom_toBottomOf="@+id/clPizzaDetailQuantityContainer"
            app:layout_constraintEnd_toStartOf="@+id/clPizzaDetailQuantityContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/clPizzaDetailQuantityContainer" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clPizzaDetailQuantityContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bPizzaDetail">

            <ImageButton
                android:id="@+id/ibPizzaDetailAdd"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_add_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPizzaDetailQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:maxLength="3"
                android:minWidth="80dp"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/ibPizzaDetailMinus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ibPizzaDetailAdd"
                tools:text="999" />

            <ImageButton
                android:id="@+id/ibPizzaDetailMinus"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_minus_detail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPizzaDetailQuantity" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvPizzaDetailTotalToPay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btPizzaDetailAddToCart"
            app:layout_constraintEnd_toStartOf="@+id/btPizzaDetailAddToCart"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btPizzaDetailAddToCart"
            tools:text="$ 5.98" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btPizzaDetailAddToCart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/add_to_cart_background"
            android:drawableStart="@drawable/ic_add_white"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/pizza_detail_add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/tvPizzaDetailTotalToPay"
            app:layout_constraintTop_toBottomOf="@+id/clPizzaDetailQuantityContainer"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>